--- a/requirements.txt
+++ b/requirements.txt
@@ -112,7 +112,7 @@ nest_asyncio
 networkx==3.3
 nltk==3.8.1
 nmslib==2.0.6
-numpy==2.0.2
+numpy
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
