--- a/requirements.txt
+++ b/requirements.txt
@@ -50,8 +50,6 @@ fsspec==2024.3.1
 func-timeout==4.3.5
 gitdb==4.0.12
 GitPython==3.1.44
-gradio==4.28.3
-gradio_client==0.16.0
 greenlet==3.0.3
 grpcio==1.58.0
 h11==0.14.0
@@ -77,9 +75,6 @@ jsonschema-specifications==2023.12.1
 jupyter_client 
 jupyter_core
 kiwisolver==1.4.5
-langchain==0.3.13
-langchain-core==0.3.28
-langchain-text-splitters==0.3.4
 langcodes==3.4.1
 langsmith==0.2.7
 language_data==1.2.0
@@ -93,8 +88,6 @@ marshmallow==3.21.2
 matplotlib==3.8.4
 matplotlib-inline 
 mdurl==0.1.2
-milvus-lite==2.4.8
-milvus-model==0.2.2
 minio==7.2.7
 mpmath==1.3.0
 multidict==6.0.5
@@ -105,7 +98,7 @@ nest_asyncio
 networkx==3.3
 nltk==3.8.1
 nmslib==2.0.6
-numpy
+numpy==2.0.0
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -147,7 +140,6 @@ pydeck==0.9.1
 pydub==0.25.1
 Pygments==2.17.2
 pyjnius==1.6.1
-pymilvus==2.4.0
 pyparsing==3.1.2
 pyserini==0.39.0
 python-dateutil 
@@ -197,7 +189,6 @@ tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 termcolor==2.4.0
-thinc==8.3.2
 threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.19.1
