--- a/requirements.txt
+++ b/requirements.txt
@@ -97,7 +97,7 @@ natsort==8.4.0
 nest_asyncio 
 networkx==3.3
 nltk==3.8.1
-numpy==2.0.0
+numpy>=1.17,<2.0
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -129,7 +129,6 @@ ptyprocess
 pure-eval 
 pyarrow==16.0.0
 pyarrow-hotfix==0.6
-pybind11==2.13.6
 pycparser==2.22
 pycryptodome==3.20.0
 pydantic==2.10.4
